--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,7 @@
       <li><h4><a href="/about/">About</a><span class="gray-text"></h4></li>
       <li><h4><a href="/archive/">Archive</a><span class="gray-text"></h4></li>
       <li><h4><a href="/projects/">Projects</a><span class="gray-text"></h4></li>
+      <li><h4><a href="/contact/">Contact</a><span class="gray-text"></h4></li>
       <li><h4><a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a></h4></li>
    </ul>
   </div>
